--- a/app/src/main/res/layout/edit_dialog.xml
+++ b/app/src/main/res/layout/edit_dialog.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="姓名:"
+        android:text="姓名(不可更改):"
         android:id="@+id/text_name"
         android:textSize="15sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="生日:"
+        android:text="生日(点击修改):"
         android:id="@+id/text_birthday"
         android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@id/text_name"
@@ -43,7 +43,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         />
-    <EditText
+    <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/text_birthday"
@@ -51,6 +51,8 @@
         app:layout_constraintLeft_toRightOf="@id/text_birthday"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/editBirthday"
+        android:textSize="15sp"
+        android:textColor="@color/colorBlack"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="5dp"
         android:singleLine="true"
